src/pages/main/components/hero/hero.module.css
.container {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	width: 100%;
	min-height: 100vh;
	overflow: hidden;
}

.column {
	display: grid;
	align-items: center;
	justify-content: center;
	min-height: 500px;
	text-align: center;
	background-position: center;
	background-size: cover;
	background-blend-mode: multiply;
	transition: 0.3s ease;
	transition: 0.3s ease;
}

.logo {
	font-size: 4rem;
	font-weight: bold;
		word-break: break-all;
}

.r {
	font-size: 5.5rem;
	color: red;
}

.column:hover {
	background-color: silver;
}

.left {
	background-color: white;
}

